--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 
             <div class="period">
                 <div class="title period-title">Период расчета</div>
-                <input class="period-select" type="range" step="1" min="1" max="12" value="1">
-                <div class="title period-amount">1</div>
+                <input class="period-select" id="period-select" type="range" step="1" min="1" max="12" value="1">
+                <div class="title period-amount" id="period-amount">1</div>
             </div>
 
         </div>
