--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 		<div class="main-form-input container">
 			<div class="row">
 				<div class="col-12 col-lg-4">
-					<input type="text" class="form-name" id="form1-name" name="user_name" placeholder="Ваше имя" required>
+					<input type="text" class="form-name" id="form1-name" name="user_name" placeholder="Ваше имя" title="Для ввода данных используйте символы кириллицы!" required>
 				</div>
 				<div class="col-12 col-lg-4">
 					<input type="email" class="form-email" id="form1-email" name="user_email" placeholder="E-mail">
 				</div>
 				<div class="col-12 col-lg-4">
-					<input type="tel" class="form-phone" id="form1-phone" name="user_phone" placeholder="Номер телефона" required>
+					<input type="tel" class="form-phone" id="form1-phone" name="user_phone" title="Введите правильный номер телефона в международном формате." placeholder="Номер телефона" required>
 				</div>
 			</div>
 		</div>
@@ -180,12 +180,6 @@
 			<a href="#" class="portfolio-btn prev" id="arrow-left"></a>
 			<a href="#" class="portfolio-btn next" id="arrow-right"></a>
 			<ul class="portfolio-dots">
-				<!-- <li class="dot dot-active"></li>
-				<li class="dot"></li>
-				<li class="dot"></li> 
-				<li class="dot"></li>
-				<li class="dot"></li>
-				<li class="dot"></li> -->
 			</ul>
 		</ul>
 	</div>
@@ -310,7 +304,7 @@
 						<div class="row">
 							<div class="col-md-4 col-md-offset-0 col-sm-12 col-sm-offset-0">
 								<input class="top-form" id="form2-name" type="text" name="user_name"
-											 placeholder="Ваше имя" required>
+											 placeholder="Ваше имя" title="Для ввода данных используйте символы кириллицы!" required>
 							</div>
 							<div class="col-md-4 col-md-offset-0 col-sm-12 col-sm-offset-0">
 								<input class="top-form form-email" id="form2-email" type="email" name="user_email"
@@ -318,11 +312,11 @@
 							</div>
 							<div class="col-md-4 col-md-offset-0 col-sm-12 col-sm-offset-0">
 								<input class="top-form form-phone" id="form2-phone" type="tel" name="user_phone"
-											 placeholder="Номер телефона" required>
+											 placeholder="Номер телефона" title="Введите правильный номер телефона в международном формате." required>
 							</div>
 							<div class="col-md-12 col-sm-12 col-12">
 								<input class="mess" id="form2-message" name="user_message"
-											 placeholder="Ваше сообщение">
+											 placeholder="Ваше сообщение" title="Для ввода данных используйте символы кириллицы!">
 							</div>
 						</div>
 					</div>
@@ -403,12 +397,12 @@
 			<h3>Введите свои данные для связи с нами!</h3>
 			<form id="form3" name="user_form">
 				<div>
-					<input type="text" class="form-name" id="form3-name" name="user_name" placeholder="Ваше имя"
+					<input type="text" class="form-name" id="form3-name" name="user_name" title="Для ввода данных используйте символы кириллицы!" placeholder="Ваше имя"
 								 required>
 				</div>
 				<div>
 					<input type="tel" class="form-phone" id="form3-phone" name="user_phone"
-								 placeholder="Ваш номер телефона" required>
+								 placeholder="Ваш номер телефона" title="Введите правильный номер телефона в международном формате." required>
 				</div>
 				<div>
 					<input type="email" class="form-email" id="form3-email" name="user_email"
